# ComputeTechnic

./: .gitignore  README.md  main.cpp
lego_technic_system/configure/: global_variables.h
lego_technic_system/core/: Component.cpp  ConstructionGraph.cpp  GuidingGraph.cpp  LEGOGenerator.cpp  LEGOGenerator.h  SketchGraph.cpp
lego_technic_system/objectives/: Grader.cpp
lego_technic_test/: CMakeLists.txt
lego_technic_test/algorithm_test/: CMakeLists.txt
lego_technic_test/system_test/: CMakeLists.txt
